syntax = "proto3";
package cross.core;

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "ibc/core/client/v1/client.proto";
import "cross/core/types.proto";

option go_package = "github.com/datachainlab/cross/x/core/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the cross Msg service.
service Msg {
  // InitiateTx defines a rpc handler method for MsgInitiateTx.
  rpc InitiateTx(MsgInitiateTx) returns (MsgInitiateTxResponse);
  // SignTx defines a rpc handler method for MsgSignTx.
  rpc SignTx(MsgSignTx) returns (MsgSignTxResponse);
  // IBCSignTx defines a rpc handler method for MsgIBCSignTx.
  rpc IBCSignTx(MsgIBCSignTx) returns (MsgIBCSignTxResponse);
}

message MsgInitiateTx {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  bytes  sender   = 1 [(gogoproto.casttype) = "AccountID"];
  string chain_id = 2;
  uint64 nonce    = 3;
  cross.core.CommitProtocol commit_protocol = 4;
  repeated cross.core.ContractTransaction contract_transactions = 5 [(gogoproto.nullable) = false];
  repeated bytes signers = 6 [(gogoproto.casttype) = "AccountID"];
  // Timeout height relative to the current block height.
  // The timeout is disabled when set to 0.
  ibc.core.client.v1.Height timeout_height = 7
      [(gogoproto.moretags) = "yaml:\"timeout_height\"", (gogoproto.nullable) = false];
  // Timeout timestamp (in nanoseconds) relative to the current block timestamp.
  // The timeout is disabled when set to 0.
  uint64 timeout_timestamp = 8
    [(gogoproto.moretags) = "yaml:\"timeout_timestamp\""];
}

// MsgInitiateTxResponse defines the Msg/InitiateTx response type.
message MsgInitiateTxResponse {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  bytes txID = 1 [(gogoproto.casttype) = "TxID"];
  InitiateTxStatus status = 2;
}

message MsgSignTx {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  bytes txID = 1 [(gogoproto.casttype) = "TxID"];
  repeated bytes signers = 2 [(gogoproto.casttype) = "AccountID"];
  // Timeout height relative to the current block height.
  // The timeout is disabled when set to 0.
  ibc.core.client.v1.Height timeout_height = 3
      [(gogoproto.moretags) = "yaml:\"timeout_height\"", (gogoproto.nullable) = false];
  // Timeout timestamp (in nanoseconds) relative to the current block timestamp.
  // The timeout is disabled when set to 0.
  uint64 timeout_timestamp = 4
    [(gogoproto.moretags) = "yaml:\"timeout_timestamp\""];
}

// MsgSignTxResponse defines the Msg/SignTx response type.
message MsgSignTxResponse {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  cross.core.InitiateTxStatus status = 1;
}

message MsgIBCSignTx {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  google.protobuf.Any cross_chain_channel = 1 [(gogoproto.nullable) = true];
  bytes txID = 2 [(gogoproto.casttype) = "TxID"];
  repeated bytes signers = 3 [(gogoproto.casttype) = "AccountID"];
  // Timeout height relative to the current block height.
  // The timeout is disabled when set to 0.
  ibc.core.client.v1.Height timeout_height = 4
      [(gogoproto.moretags) = "yaml:\"timeout_height\"", (gogoproto.nullable) = false];
  // Timeout timestamp (in nanoseconds) relative to the current block timestamp.
  // The timeout is disabled when set to 0.
  uint64 timeout_timestamp = 5
    [(gogoproto.moretags) = "yaml:\"timeout_timestamp\""];
}

// MsgIBCSignTxResponse defines the Msg/IBCSignTx response type.
message MsgIBCSignTxResponse {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  uint32 status = 1;
}
